--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -3,3 +3,4 @@
 - User shared canonical GitHub Pages URL for BeyondZenith: https://beyondzenithwebsite.github.io/Website/
 - User domain setup context: custom domain `www.beyondzenith.org`, registrar/DNS provider Squarespace.
 - User preference: assistant should remember important setup details (links, platform/provider context) proactively.
+- User explicitly requested: stop using Zapier MCP; use `gog` for email operations from now on.
