--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -5,3 +5,4 @@
 - User preference: assistant should remember important setup details (links, platform/provider context) proactively.
 - User explicitly requested: stop using Zapier MCP; use `gog` for email operations from now on.
 - User confirmed they want proactive memory maintenance: remember actions and preferences going forward.
+- User provided BeyondZenith booking link: https://calendar.app.google/mU9KbzGJ7LMYyo6N6
