--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -3,3 +3,10 @@
 - User asked assistant to remember tool access/capabilities so they don't need to repeat it.
 - Reinforced preference: proactively remember actions and preferences.
 - Current key preference set remains: use `gog` for email tasks, not Zapier MCP.
+- Strategy update from user:
+  - Canonical domain confirmed as primary (`www.beyondzenith.org`).
+  - Growth objective: become a leading consultancy in Melbourne, with Australia-wide visibility.
+  - Positioning objective: recognized thought leader.
+  - Proof points from Whitefox: ~2x YoY revenue growth, company size doubled, global expansion support.
+  - Brand direction: modern, cutting-edge, results-driven.
+  - Publishing preference: 3 posts per week.
