Record contact, LinkedIn asset, and autopost preferences

--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -10,3 +10,7 @@
   - Proof points from Whitefox: ~2x YoY revenue growth, company size doubled, global expansion support.
   - Brand direction: modern, cutting-edge, results-driven.
   - Publishing preference: 3 posts per week.
+- Execution preferences confirmed:
+  - Keep contact email as `hello@beyondzenith.org`.
+  - Use LinkedIn photo and bio for website authority section.
+  - User approved autoposting workflow for social publishing.
