Save LinkedIn profile URL and Zapier autopost setup note

--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -14,3 +14,5 @@
   - Keep contact email as `hello@beyondzenith.org`.
   - Use LinkedIn photo and bio for website authority section.
   - User approved autoposting workflow for social publishing.
+- User LinkedIn URL provided: `https://au.linkedin.com/in/anastasm`.
+- User will work on Zapier setup for social autoposting.
